<resources>
    <string name="app_name">FitnessBodybuilding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_esercizi">Esercizi Possibili</string>
    <string name="menu_scheda">Schede Personalizzate</string>
    <string name="menu_calendario">Calendario</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>