<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fitnessbodybuilding.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_esercizi"
        android:name="com.example.fitnessbodybuilding.ui.esercizi.EserciziFragment"
        android:label="@string/menu_esercizi"
        tools:layout="@layout/fragment_esercizi" />

    <fragment
        android:id="@+id/nav_scheda"
        android:name="com.example.fitnessbodybuilding.ui.schedaEs.schedaEsFragment"
        android:label="@string/menu_scheda"
        tools:layout="@layout/fragment_scheda" />
    <fragment
        android:id="@+id/nav_cal"
        android:name="com.example.fitnessbodybuilding.ui.calendario.CalendarioFragment"
        android:label="@string/menu_calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.fitnessbodybuilding.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
</navigation>